tekton/argocd/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: tekton-gateway
  namespace: tekton-pipelines
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 443
        name: https
        protocol: HTTPS
      hosts:
        - tekton.gkmc.lan
      tls:
        mode: SIMPLE
        credentialName: tekton-dashboard-tls
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - tekton.gkmc.lan
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: tekton-dashboard
  namespace: tekton-pipelines
spec:
  hosts:
    - tekton.gkmc.lan
  gateways:
    - tekton-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: tekton-dashboard
            port:
              number: 9097
